--- a/Plugins/inc.arylmera.roomlights/app.json
+++ b/Plugins/inc.arylmera.roomlights/app.json
@@ -70,6 +70,41 @@
           }
         ],
         "id": "setroomlights"
+      },
+      {
+        "title": {
+          "en": "setRoomLightsColors"
+        },
+        "hint": {
+          "en": "Set the brightness and the color of all the lights in a room"
+        },
+        "titleFormatted": {
+          "en": "Set alls the lights of [[room]] to brightness [[brightness]] and Color [[color]]"
+        },
+        "args": [
+          {
+            "type": "text",
+            "name": "room",
+            "placeholder": {
+              "en": "Bureau"
+            }
+          },
+          {
+            "type": "number",
+            "name": "brightness",
+            "placeholder": {
+              "en": "0.5"
+            },
+            "min": 0,
+            "max": 1,
+            "step": 0.01
+          },
+          {
+            "type": "color",
+            "name": "color"
+          }
+        ],
+        "id": "setroomlightscolors"
       }
     ]
   }
