--- a/Plugins/inc.lemer.roomLights/app.json
+++ b/Plugins/inc.lemer.roomLights/app.json
@@ -42,8 +42,11 @@
         },
         "args": [
           {
-            "type": "text",
+            "type": "autocomplete",
             "name": "room",
+            "title": {
+              "en": "Room"
+            },
             "placeholder": {
               "en": "Bedroom"
             }
@@ -85,10 +88,13 @@
         },
         "args": [
           {
-            "type": "text",
+            "type": "autocomplete",
             "name": "room",
+            "title": {
+              "en": "Room"
+            },
             "placeholder": {
-              "en": "Bureau"
+              "en": "Bedroom"
             }
           },
           {
