--- a/Plugins/inc.lemer.roomLights/app.json
+++ b/Plugins/inc.lemer.roomLights/app.json
@@ -20,10 +20,11 @@
     "homey:manager:api"
   ],
   "images": {
-    "small": "/assets/images/small.png",
-    "large": "/assets/images/large.png",
-    "xlarge": "/assets/images/xlarge.png"
+    "small": "/assets/images/roomLights.png",
+    "large": "/assets/images/roomLights.png",
+    "xlarge": "/assets/images/roomLights.png"
   },
+  "brandColor": "#308511",
   "author": {
     "name": "Guillaume Lemer",
     "email": "guillaume@lemer.be"
