--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "inc.lemer.roomLights",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -31,6 +31,52 @@
   },
   "flow": {
     "actions": [
+      {
+        "title": {
+          "en": "setRoomAmbiance"
+        },
+        "hint": {
+          "en": "Set the status of the all the ambiances lights in a room"
+        },
+        "titleFormatted": {
+          "en": "Set all the ambiances lights of [[room]] to brightness [[brightness]] and Temperature [[temperature]]"
+        },
+        "args": [
+          {
+            "type": "autocomplete",
+            "name": "room",
+            "title": {
+              "en": "Room"
+            },
+            "placeholder": {
+              "en": "Bedroom"
+            }
+          },
+          {
+            "type": "range",
+            "name": "brightness",
+            "title": "brightness",
+            "min": 0,
+            "max": 1,
+            "step": 0.01,
+            "label": "%",
+            "labelDecimals": 0,
+            "labelMultiplier": 100
+          },
+          {
+            "type": "range",
+            "name": "temperature",
+            "title": "temperature",
+            "min": 0,
+            "max": 1,
+            "step": 0.01,
+            "label": "%",
+            "labelDecimals": 0,
+            "labelMultiplier": 100
+          }
+        ],
+        "id": "setRoomAmbiance"
+      },
       {
         "title": {
           "en": "SetRoomLights"
@@ -75,7 +121,7 @@
             "labelMultiplier": 100
           }
         ],
-        "id": "setroomlights"
+        "id": "setRoomlights"
       },
       {
         "title": {
@@ -114,7 +160,7 @@
             "name": "color"
           }
         ],
-        "id": "setroomlightscolors"
+        "id": "setRoomlightscolors"
       }
     ]
   }
